--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,24 @@ button {
   position: absolute;
 }
 
+.email {
+  margin-bottom: 0;
+  margin-left: 59px;
+}
+
+.perfil {
+  margin-left: 496px;
+  margin-top: 0;
+  background-color: lightgrey;
+  color: black;
+  padding: 10px;
+  border-radius: 12px;
+}
+
+.perfil:hover{
+  color white;
+}
+
 /* seccion Overview */
 #first-section{
   margin-top: 44px;
@@ -154,10 +172,6 @@ button {
 .imagen, .imagen1 {
   display: inline-block;
   margin-left: 30px;
-}
-
-.email{
-  margin-left: 59px;
 }
 
 #first-section {
